# hopp

./: .gitignore  .golangcli.yml  .pre-commit-config.yaml  .prettierrc  README.md  Taskfile.yml  package.json
.github/: CODEOWNERS
.github/workflows/: hopp_core.yml  linting.yml  tauri_rust.yml  trigger_prod.yml
.yarn/patches/: @livekit-krisp-noise-filter-npm-0.3.0-ad3abbd55c.patch
backend/: .air.toml  .gitignore  Dockerfile  README.md  Taskfile.yml  go.mod  go.sum  main.go
backend/api-files/: Create User.bru  Create_dummy_user.bru  Generate call tokens.bru  Get invitation URL.bru  Get invitation details.bru  Get teammates.bru  Get user info.bru  Invite users.bru  Test JWT.bru  bruno.json  openapi.yaml
backend/docker-files/: docker-compose.yml  fullstack-compose.yml
backend/env-files/: .env.local
backend/internal/common/: common.go  utils.go
backend/internal/config/: config.go
backend/internal/email/: email.go
backend/internal/handlers/: handlers.go  jwt.go  sentryHandler.go  utils.go  websocketHandlers.go
backend/internal/messages/: messages.go
backend/internal/middlewares/: middlewares.go
backend/internal/models/: invitation.go  team.go  user.go
backend/internal/notifications/: telegram.go
backend/internal/server/: server.go
backend/sql/: mock_data.sql
backend/web/: debug.html  login.html  user.html  web-app-debug.html
backend/web/emails/: hopp-invite-teammate.html  hopp-welcome.html
core/: Cargo.toml  README.md  Taskfile.yml  build.rs
core/sentry_utils/: Cargo.toml
core/sentry_utils/src/: lib.rs
core/socket_lib/: Cargo.toml
core/socket_lib/src/: lib.rs
core/src/: lib.rs  main.rs  overlay_window.rs  room_service.rs
core/src/capture/: capturer.rs  linux.rs  macos.rs  stream.rs  windows.rs
core/src/graphics/: cursor.rs  direct_composition.rs  graphics_context.rs  marker.rs  shader.wgsl
core/src/input/: keyboard.rs  keyboard_linux.rs  keyboard_macos.rs  keyboard_windows.rs  mouse.rs  mouse_linux.rs  mouse_macos.rs  mouse_windows.rs
core/src/utils/: geometry.rs  svg_renderer.rs
core/tests/: Cargo.toml  README.md
core/tests/.cargo/: config.toml
core/tests/src/: events.rs  livekit_utils.rs  main.rs  remote_cursor.rs  remote_keyboard.rs  screenshare_client.rs
docs/: astro.config.mjs  package.json
docs/src/components/: Hero.astro
docs/src/content/docs/: faq.mdx  index.mdx
docs/src/styles/: global.css
livekit-local-server/: Taskfile.yml  config.yml
tauri/: .env.dev  .gitignore  DEVELOPMENT.md  README.md  Taskfile.yml  contentPicker.html  index.html  package.json  permissions.html  screenshare.html  tailwind.config.cjs  test.html  trayNotification.html  tsconfig.json  vite.config.ts
tauri/src/: App.css  constants.ts  global.d.ts  openapi.d.ts  payloads.ts  update.ts
tauri/src-tauri/: Cargo.toml  Info.plist  convert_dump.sh  tauri.conf.json  tauri.conf.rel.json
tauri/src-tauri/capabilities/: desktop.json  migrated.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: app_state.rs  lib.rs  main.rs  permissions.rs  sounds.rs
tauri/src-tauri/src/permissions/: default.rs  macos.rs
tauri/src/components/: conditional-wrapper.tsx
tauri/src/components/SharingScreen/: Controls.tsx  SharingScreen.tsx  utils.ts
tauri/src/components/sidebar/: Sidebar.tsx
tauri/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  call-banner.tsx  call-center.tsx  context-menu.tsx  copiable-input.tsx  cursor.tsx  dropdown-menu.tsx  file-input.tsx  hopp-avatar.tsx  participant-row-wo-livekit.tsx  participants.tsx  select.tsx  (+6 more)
tauri/src/constants/: sounds.ts
tauri/src/lib/: authUtils.ts  hooks.ts  logger.ts  sound_utils.ts  utils.ts
tauri/src/services/: query.tsx  sentry.tsx  socket.ts
tauri/src/store/: store.ts
tauri/src/windows/: window-utils.ts
web-app/: .gitignore  Taskfile.yml  index.html  package.json  tailwind.config.js  vite.config.ts
web-app/src/: App.tsx  constants.ts  index.css  openapi.d.ts
web-app/src/components/: SignInSuccessModal.tsx  sidebar.tsx
web-app/src/hooks/: useQueryClients.tsx
web-app/src/pages/: Dashboard.tsx  Login.tsx  Settings.tsx  Teammates.tsx
web-app/src/store/: state.ts  store.ts
(+27 files in other folders)
