[package]
name = "hopp_core"
version = "0.0.34"
edition = "2021"
authors = ["Iason Paraskevopoulos <iaswnparaskev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hopp_core"
path = "src/main.rs"

[workspace]
exclude = [ "tests" ]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    ]}

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25.0", features = ["highsierra"] }
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
objc2-app-kit = "0.3.1"
objc2 = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.21.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
winit = { version = "0.30.5", features = [ "rwh_06", "rwh_05" ] }
wgpu = "25.0.0"
pollster = "0.3.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
image = { version = "0.25.5", features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raw-window-handle = "0.6.2"
env_logger = "0.11.5"
log = "0.4.22"
base64 = "0.22.1"
livekit = { git = "https://github.com/gethopp/rust-sdks", branch = "patches", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
socket_lib = { path = "socket_lib" }
sentry_utils = { path = "sentry_utils" }
thiserror = "2.0.12"
sysinfo = "0.35.2"
resvg = "0.45.1"
fontdb = "0.23.0"
