[package]
version = "0.1.0"
edition = "2021"
name = "hopp_core_tests"

[dependencies]
livekit = { version = "0.7.0", features = ["native-tls"] }
tokio = { version = "1", features = ["full", "parking_lot"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket_lib = { path = "../socket_lib" }
clap = { version = "4.5", features = ["derive"] }
livekit-api = "0.4.4"
rand = "0.8"
