[package]
name = "hopp"
version = "0.0.33"
description = "Hopp"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = "0.1.2"
accessibility-sys = "0.2.0"
av-foundation = "0.5.2"
core-graphics = "0.24.0"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2.7.1"

[dependencies]
tauri = { version = "2.6.1", features = ["macos-private-api", "tray-icon", "image-ico"] }
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pollster = "0.3"
tauri-plugin-log = { version = "2.0.0" }
log = "0.4"
rand = "0.8.5"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
dirs = "5.0.1"
tauri-plugin-deep-link = "2"
rodio = "0.20.1"
socket_lib = { path = "../../core/socket_lib" }
os_info = "3.10.0"
sentry_utils = { path = "../../core/sentry_utils" }
thiserror = "2.0.12"
sysinfo = "0.35.2"
tauri-plugin-opener = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
